--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "filament/filament": "3.0.96",
+        "filament/filament": "^3.1",
         "spatie/laravel-medialibrary": "^11.0",
         "laravel/sanctum": "^4.0",
         "darkaonline/l5-swagger": "^8.5"
